# cimig_agent

./: README.md  pyproject.toml
backend/: main.py
cimig_agent/: __init__.py  main.py
cimig_agent/agent/: graph.py  state.py
cimig_agent/agents/: cimig_agent.py
cimig_agent/context/: history.py
cimig_agent/core/: __init__.py  agent.py  config.py  exceptions.py  llm.py  llm_adapters.py  llm_response.py  message.py  session_store.py
cimig_agent/observability/: trace_logger.py
cimig_agent/tools/: apply_change_and_push.py  base.py  circuit_breake.py  get_github_actions_logs.py  get_github_actions_status.py  read_file.py  registry.py  response.py
cimig_agent/tools/builtin/: check_workflow_result.py  get_wrong_log.py  git_commit.py  read_tool.py  write_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
frontend/src/router/: index.ts
frontend/src/views/: loginView.vue  registerView.vue
test/: test_all_agent.py
